# DPT_Dados_Vendas

./: .gitignore  AGENTS.md  Projeto.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
output/: test.duckdb
specs/001-csv-data-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-csv-data-extraction/checklists/: extraction.md  requirements.md
specs/001-csv-data-extraction/contracts/: extract-csv.md
specs/002-data-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-data-validation/checklists/: requirements.md
specs/002-data-validation/contracts/: validate-sales.md
specs/003-analytical-preparation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-analytical-preparation/checklists/: requirements-quality.md  requirements.md
specs/003-analytical-preparation/contracts/: prepare-sales.md
specs/004-analytical-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-analytical-metrics/checklists/: metrics.md  requirements.md
specs/005-duckdb-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: analyze.py  config.py  extract.py  prepare.py  store.py  validate.py
src/sql/: create_tables.sql  create_views.sql
tests/: test_analyze.py  test_extract.py  test_prepare.py  test_store.py  test_validate.py
(+2 files in other folders)
