[project]
name = "dpt-dados-vendas"
version = "0.1.0"
description = "ETL com Dados de Vendas — Módulo de Extração CSV"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2,<3",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]